# binary-bits

./: .travis.yml  Bits.hs  BitsGet.hs  BitsPut.hs  BitsQC.hs  LICENSE  binary-bits.cabal
.github/workflows/: ci.yaml
Data/Binary/: Bits.hs
Data/Binary/Bits/: Alignment.hs  BitOrder.hs  Get.hs  Internal.hs  Put.hs
