-- http://www.haskell.org/cabal/release/cabal-latest/doc/users-guide/authors.html#pkg-descr.
name:                binary-bits
version:             0.1
synopsis:            Bit parsing on top of binary.
description:         Bit parsing on top of binary. Provides functions to
                     read bits as 8/16/32/64 words.
license:             BSD3
license-file:        LICENSE
author:              Lennart Kolmodin <kolmodin@gentoo.org>
maintainer:          Lennart Kolmodin <kolmodin@gentoo.org>
-- copyright:
category:            Data
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or
-- a README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  build-depends: base==4.*, binary, bytestring

  other-extensions: RankNTypes, MagicHash, BangPatterns, CPP

  exposed-modules:     Data.Binary.Bits ,
                       Data.Binary.Bits.Put ,
                       Data.Binary.Bits.Get

  default-language:    Haskell98

  -- other-modules:
  -- build-tools:

test-suite qc
  type: exitcode-stdio-1.0
  main-is: BitsQC.hs
  default-language:    Haskell98

  build-depends: binary-bits, binary,
                 base==4.*, haskell98, bytestring,
                 QuickCheck>=2, random,
                 test-framework,
                 test-framework-quickcheck2
  ghc-options: -fhpc

  default-extensions: FlexibleInstances, FlexibleContexts, TupleSections
